Changes for 1.2.7
* Updating UnitImageFactory to not rely on hardcoded unit names. Now any unit with isAA unit attachment will require _r and _rockets and _rockets_r IF you have those technologies.  Same applied for new aa gun rules and factories. (veqryn)

* Added new unit attachment, isRocket, which will turn the unit into a rocket when the player has the rocket technology, without the unit being an AA gun.  
  If the unit is named exactly "aaGun" then it will require an image called "rockets".  If the unit is named anything else, then it will require an image with "_rockets" appended to its original name. (veqryn)

* Added new unit attachment, isAAmovement, which when true the unit will follow the rules specified for movement of an AA gun, even if it is not an AA gun, or is a special kind of AA gun. (veqryn)

* Fixed issue where battle calc calls with AA units was generating divide by zero. (veqryn)

* Fixed bug where battles never ended between units with zero attack/defense power. (veqryn)

* Added new menu option during a game, "Roll Dice...", in the "Game" drop down menu. It allows a player to roll as many dice, with any dice sides, that they want, independant from playing the game. (veqryn)

* Added new unit attachments, <option name="isAAforCombatOnly" value="true"/> and <option name="isAAforBombingThisUnitOnly" value="true"/>, allow units to be AA guns for only certain attack types. (veqryn)

* Added new unit attachments, <option name="attackAAmaxDieSides" value="6"/> and <option name="attackAA" value="1"/>, which allow you to independently set the attack values and max dice sides for AA units. Radar Tech changed to add "1" to the attack values. 
  Attack values, including radar, may never go above half of the max dice sides. All attack values (with and without radar) should divide into diceSides without any remainder, otherwise the players will get errors during LowLuck. (veqryn)
